[tool.poetry]
name = "web3py-test"
version = "0.1.0"
description = ""
authors = ["wallawaz <bwallad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
web3 = "^5.11.0"
click = "^7.1.2"
etherscan = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipdb = "^0.13.2"

[tool.poetry.scripts]
poll-contracts = "web3py_test.cli:main"
historic-exchanges = "web3py_test.cli:main_historic"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
